--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+html {
+  font-family: 'Poppins', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -36,3 +41,20 @@
     transform: rotate(360deg);
   }
 }
+/* src/App.css */
+/* .app-container {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+.cards-section {
+  font-family: 'Poppins';
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  width: 100%;
+}
+ 
