--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+html {
+  font-family: 'Poppins', sans-serif;
 }
 
-code {
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+/* Ensure the navbar collapses by default and is mobile-first */
+.navbar-toggler {
+  border: white;
+  font-family: 'Poppins', sans-serif;
+}
+
+.navbar-brand {
+  font-size: 1.2rem;
+  font-family: 'Poppins', sans-serif;
+}
+
+.collapse.navbar-collapse {
+  margin-top: 10px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.navbar-nav .nav-link {
+  padding: 10px 15px;
+  color: black;
+  text-align: left;
+  font-family: 'Poppins', sans-serif;
+}
+.nav-item{
+  font-size: 14px;
+}
+.navbar {
+  padding: 10px 15px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.navbar-toggler-icon {
+ color: red; /* Style the hamburger icon */
+ font-family: 'Poppins', sans-serif;
 }
